@@ -1,8 +1,8 @@
 # Figure out how to run the assembler.             -*- Autoconf -*-
 
-# serial 2
+# serial 3
 
-# Copyright (C) 2001, 2003 Free Software Foundation, Inc.
+# Copyright (C) 2001, 2003, 2004 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
