@@ -92,6 +92,9 @@ Bug fixed in 1.8.0c:
   - Fix AM_PATH_LISPDIR to avoid \? in sed regular expressions; it
     doesn't conform to POSIX.
 
+  - Normalize help strings for configure variables and options added
+    by Automake macros.
+
 * Anticipation:
 
   - Check for python2.4 in AM_PATH_PYTHON.
