@@ -1,5 +1,8 @@
 2004-01-11  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* m4/as.m4, m4/depend.m4, m4/maintainer.m4, m4/multi.m4: Update
+	copyright years and serial.
+
 	* m4/python.m4 (_AM_PYTHON_INTERPRETER_LIST): Add python2.4.
 
 2004-01-10  Peter Eisentraut  <peter_e@gmx.net>  (tiny change)
